--- a/src/components/CSSComponents/navbar.css
+++ b/src/components/CSSComponents/navbar.css
@@ -6,8 +6,32 @@
 }
 .panel{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     font-size: 34px;
     background-color: #f9e2ce;
+}
+
+.canzas{
+        display: flex;
+        justify-content: space-around;
+        width: 70%;
+}
+.menu{
+    width: 0;
+    padding: 0;
+    border: 0;
+    background-color: white;
+}
+
+@media (max-width: 900px) {
+    .panel{
+        font-size: 25px;
+    }
+    .canzas{
+        display: none;
+    }
+    .menu{
+        width: 50px;
+    }
 }
