--- a/src/components/CSSComponents/navbar.css
+++ b/src/components/CSSComponents/navbar.css
@@ -23,6 +23,15 @@
     border: 0;
     background-color: white;
 }
+.onCanzas{
+    background-color: black;
+    position: fixed;
+    z-index: 4;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 40%;
+}
 
 @media (max-width: 900px) {
     .panel{
