CSSComponents in src

--- a/src/CSSComponents/footer.css
+++ b/src/CSSComponents/footer.css
@@ -2,7 +2,7 @@ footer{
     width: 100%;
     font-size: 25px;
     padding: 25px 0;
-    background-image: url(../../imagin/smoke3.jpg);
+    background-image: url(../imagin/smoke3.jpg);
 }
 #kontakts{
     font-family: "Wide Latin";
