--- a/src/CSSComponents/katalog.css
+++ b/src/CSSComponents/katalog.css
@@ -1,7 +1,7 @@
 .katalog{
     display: flex;
     flex-wrap: wrap;
-    background:url(../../imagin/smoke3.jpg) no-repeat center/cover;
+    background:url(../imagin/smoke3.jpg) no-repeat center/cover;
     background-clip: padding-box;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
